# spatiocyte

./: AUTHORS  Dockerfile  INSTALL  README  install-mac.sh  install-spatiocyte-mac.sh  install-spatiocyte-ubuntu.sh  mac_glibmm_h.diff
ecell/: configure.ac.in
ecell/dm/: Makefile.am
ecell/libecs/: CompartmentProcess.cpp  CompartmentProcess.hpp  CoordinateLogProcess.hpp  DiffusionInfluencedReactionProcess.cpp  DiffusionInfluencedReactionProcess.hpp  DiffusionProcess.hpp  ErythrocyteProcess.cpp  ErythrocyteProcess.hpp  FilamentProcess.cpp  FilamentProcess.hpp  HistogramLogProcess.cpp  HistogramLogProcess.hpp  IteratingLogProcess.cpp  IteratingLogProcess.hpp  LifetimeLogProcess.cpp  LifetimeLogProcess.hpp  Makefile.am  MechanicsProcess.cpp  MechanicsProcess.hpp  MicrotubuleProcess.cpp  MicrotubuleProcess.hpp  MigrationProcess.cpp  MigrationProcess.hpp  Model.cpp  MoleculePopulateProcess.cpp  MoleculePopulateProcess.hpp  MultiscaleReactionProcess.cpp  MultiscaleReactionProcess.hpp  PeriodicBoundaryDiffusionProcess.hpp  ReactionProcess.cpp  ReactionProcess.hpp  SpatiocyteCommon.hpp  SpatiocyteNextReactionProcess.cpp  SpatiocyteNextReactionProcess.hpp  SpatiocyteProcess.cpp  SpatiocyteProcess.hpp  SpatiocyteSpecies.cpp  SpatiocyteSpecies.hpp  SpatiocyteStepper.cpp  SpatiocyteStepper.hpp  (+12 more)
ecell/libecs/Mechanocyte/: Makefile.am  cmlibswD.f  mxlibswD.f
ecell/libecs/mechanocyte/: Makefile.am  avlibsw45.f  cmlibswD.f  deformlib.f  interface.f  iolibswN.f  lupack.f  molibswE.f  mxlibswD.f
ecell/libecs/random_simd/: Makefile.am
ecell/visualizer/: SpatiocyteVisualizer.cpp  SpatiocyteVisualizer.hpp
examples/: README
examples/1D/: 1D.py  1D_biased.py  1D_biased_walk.py  README  blender.py  blender_parameters.py  plot.py
examples/2D/: 2D.cpp  2D.py  2D_inter_cluster.py  README  blender.py  blender_parameters.py
examples/3D/: 3D.py  README  blender.py  blender_parameters.py
examples/accuracy/1D_reaction/: collision.py  greens_function.cpp  greens_function.csv  irreversible_x.py  model.py  publish.py  run_model.py
examples/accuracy/3D_reaction/: model.py  plot.py
examples/accuracy/3D_to_1D_binding/: plotIterateLog.py  publish.py
examples/accuracy/3D_to_1D_binding/3D_lattice_1D_off_lattice/: greens_function.cpp  irreversible_x.py  irreversible_y.py  irreversible_z.py
examples/accuracy/3D_to_2D_adsorption/: mathematica.nb
examples/accuracy/3D_to_2D_adsorption/3D_lattice_2D_lattice/: irreversible_xy.py  irreversible_yz.py
examples/accuracy/3D_to_2D_adsorption/3D_lattice_2D_off_lattice/: irreversible_xy.py  irreversible_xz.py  irreversible_yz.py
examples/accuracy/3D_to_2D_cylinder_adsorption/: plotIterateLog.py
examples/accuracy/3D_to_2D_cylinder_adsorption/3D_lattice_2D_lattice/: 3D_to_2D_cylinder_adsorption.cpp  irreversible_x.py
examples/accuracy/3D_to_2D_planar_adsorption/: plotIterateLog.py  surface_adsorption.csv
examples/accuracy/3D_to_2D_planar_adsorption/3D_lattice_2D_lattice/: irreversible_xy.py  irreversible_xz.py  irreversible_yz.py
examples/accuracy/3D_to_2D_planar_adsorption/3D_lattice_2D_off_lattice/: irreversible_xy.py  irreversible_xz.py  irreversible_yz.py
examples/benchmark/: README  plot_diffusion.py  plot_diffusion_point.py  plot_reaction.py  plot_reaction_andrews_2018.py  publish_diffusion.py  publish_diffusion_point.py  publish_reaction.py  run_all.py
examples/benchmark/egfrd/: README  reaction.py  reaction_small_r.py  run_all.py  run_all_dense.py  run_egfrd.py  run_single.py
examples/benchmark/fastbd/: README  fastbd.cpp  run_all.py  run_all_dillute.py  run_all_dilute.py  run_single.py
examples/benchmark/smoldyn/: README  diffusion.txt  diffusion_excluded_volume.txt  reaction.py  reaction.txt  reaction_andrews_2018.py  reaction_andrews_2018.txt  reaction_small_dt.py  run_all.py  run_all_dillute.py  run_all_dilute.py  run_all_excluded_volume.py  run_all_excluded_volume_dillute.py  run_all_excluded_volume_dilute.py  run_single.py
examples/benchmark/spatiocyte/: README  diffusion.py  diffusion_point.py  ode.py  ode_andrews_2018.py  plot_diffusion.py  reaction.py  reaction_andrews_2018.py  reaction_small_dt.py  run_all.py  run_all_dillute.py  run_all_dilute.py  run_all_point.py  run_all_point_dillute.py  run_all_point_dilute.py  run_single.py
examples/blender/: README  blender.py  internal_script.py  save_blender_file.py
examples/mechanics/: mechanics.000
examples/microtubule/: microtubule.py
examples/migration/: .migration.000.swn  gmv.attr  migration.000  tdump
examples/ode-snrp-particle/: README  ode-snrp-particle.py
examples/particle_tracking/: README  blender_parameters.py  concatenate_images.py  particle_tracking.py  particle_tracking_dimer.py
examples/plot/: plotCoordinateLog.py  plotHistogramLog.py  plotIterateLog.py
examples/published/2010.arjunan.syst.synth.biol/: 2010.arjunan.syst.synth.biol.wt.em  README  blender_parameters.py
examples/published/2012.arjunan.chapter/: 2012.arjunan.chapter.populate.py
examples/published/2018.chew.pre/: model.py  ode_distributive.py  ode_processive.py  plot.py  snrp_distributive_model.py
examples/published/2018.chew.pre/high_volume/ode/: ode_distributive.py  ode_processive.py
examples/published/2018.chew.pre/ode/: ode_distributive.py  ode_processive.py
examples/published/2018.chew.pre/snrp/: snrp_distributive_model.py  snrp_processive_model.py
examples/simple/: 2Dsquare.cpp
examples/snrp-particle/: README  snrp-particle.em  snrp-particle.py
examples/tests/: testDiffusionVolume.py  testTaggedCoordinateLogProcess.py
examples/translocation/: surface_translocation.py
libltdl/: acinclude.m4  configure.ac
samples/mechanics/: mechanics.py
samples/migration/: .migration.317.swp  .migration.py.swp  .swp  compileXgmvsw  gmvswU.f  iolibswL.f  makgmv  migration.000  migration.py  paraviewConc.py
samples/plots/: plotCoordinateLogProcess.example.py  plotHistogramLogProcess.example.py
samples/simple/: 2Dsquare.py  3Dcube.py
samples/tests/: testDiffusionSurface.em  testDiffusionVolume.py
